Corrected overwrite with wrong repository

--- a/project-mit-xpro.html
+++ b/project-mit-xpro.html
@@ -491,10 +491,11 @@
         <!-- #endregion -->
         <div class="content-wrap">
             <div class="container">
+                <!-- BAD BANK1: Fire Hydrant -->
                 <div class="row gv-3 align-items-center mb-100 mb-lg-0">
                     <div class="col-12 col-lg-6 show-on-scroll" data-show-duration="500" data-show-distance="20" data-show-origin="left" data-show-delay="250">
-                        <a href="assets/images/mit-xpro/badbank.png" class="gallery-item gallery-item-lg" data-fancybox="gallery-1" data-animation-effect="fade">
-                            <img src="assets/images/mit-xpro/badbank.png" alt="">
+                        <a href="assets/images/mit-xpro/badbank.png" class="gallery-item gallery-item-lg" data-fancybox="" data-animation-effect="fade">
+                            <img src="assets/images/mit-xpro/badbank.png" alt="" border="1">
                         </a>
                     </div>
                     <div class="d-none d-lg-block col-1 me-xl-10"></div>
@@ -523,10 +524,11 @@
                     </div>
                     <div class="d-none d-xl-block col-1"></div>
                 </div>
+                <!-- PAC MEN: HTML Game -->
                 <div class="row gv-3 align-items-center mb-100 mb-lg-0">
                     <div class="col-12 col-lg-6 order-lg-3 show-on-scroll" data-show-duration="500" data-show-distance="20" data-show-origin="right" data-show-delay="250">
-                        <a href="assets/images/mit-xpro/pacmen.png" class="gallery-item gallery-item-lg" data-fancybox="gallery-1" data-animation-effect="fade">
-                            <img src="assets/images/mit-xpro/pacmen.png" alt="">
+                        <a href="assets/images/mit-xpro/pacmen.png" class="gallery-item gallery-item-lg" data-fancybox="" data-animation-effect="fade">
+                            <img src="assets/images/mit-xpro/pacmen.png" alt="" border="1">
                         </a>
                     </div>
                     <div class="d-none d-lg-block col-1 order-lg-2"></div>
@@ -552,10 +554,11 @@
                         </div>
                     </div>
                 </div>
+                <!-- EYE EXERCISE: HTML Game -->
                 <div class="row gv-3 align-items-center mb-100 mb-lg-0">
                     <div class="col-12 col-lg-6 show-on-scroll" data-show-duration="500" data-show-distance="20" data-show-origin="left" data-show-delay="250">
-                        <a href="assets/images/mit-xpro/eyeexercise.png" class="gallery-item gallery-item-lg" data-fancybox="gallery-1" data-animation-effect="fade">
-                            <img src="assets/images/mit-xpro/eyeexercise.png" alt="">
+                        <a href="assets/images/mit-xpro/eyeexercise.png" class="gallery-item gallery-item-lg" data-fancybox="" data-animation-effect="fade">
+                            <img src="assets/images/mit-xpro/eyeexercise.png" alt="" border="1">
                         </a>
                     </div>
                     <div class="d-none d-lg-block col-1 me-xl-10"></div>
@@ -582,10 +585,11 @@
                     </div>
                     <div class="d-none d-xl-block col-1"></div>
                 </div>
-                <div class="row gv-3 align-items-center">
+                <!-- BUS TRACKER: Map Application -->
+                <div class="row gv-3 align-items-center mb-100 mb-lg-0">
                     <div class="col-12 col-lg-6 order-lg-2 show-on-scroll" data-show-duration="500" data-show-distance="20" data-show-origin="right" data-show-delay="50">
-                        <a href="assets/images/mit-xpro/bustracker.png" class="gallery-item gallery-item-lg" data-fancybox="gallery-1" data-animation-effect="fade">
-                            <img src="assets/images/mit-xpro/bustracker.png" alt="">
+                        <a href="assets/images/mit-xpro/bustracker.png" class="gallery-item gallery-item-lg" data-fancybox="" data-animation-effect="fade">
+                            <img src="assets/images/mit-xpro/bustracker.png" alt="" border="1">
                         </a>
                     </div>
                     <div class="d-none d-lg-block col-1 order-lg-1"></div>
@@ -605,6 +609,76 @@
                                     <li class="list-group-item"><span class="fw-medium me-8">Client:</span>MIT xPRO</li>
                                     <li class="list-group-item"><span class="fw-medium me-8">GitHub:</span>
                                         <a href="https://github.com/tjmcode/MITxPRO-RealTimeBusTracker.git"><u>Bus Tracker</u></a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <p></p>
+                        <p></p>
+                    </div>
+                </div>
+                <!-- SHOPPING CART: React Application -->
+                <div class="row gv-3 align-items-center mb-100 mb-lg-0">
+                    <div class="col-12 col-lg-6 show-on-scroll" data-show-duration="500" data-show-distance="20" data-show-origin="left" data-show-delay="250">
+                        <a href="assets/images/mit-xpro/shoppingcart.png" class="gallery-item gallery-item-lg" data-fancybox="" data-animation-effect="fade">
+                            <img src="assets/images/mit-xpro/shoppingcart.png" alt="" border="1">
+                        </a>
+                    </div>
+                    <div class="d-none d-lg-block col-1 me-xl-10"></div>
+                    <div class="col-12 col-lg ms-xl-5 me-xl-n10 show-on-scroll" data-show-duration="500" data-show-distance="20" data-show-origin="left" data-show-delay="50">
+                        <h3>Shopping Cart</h3>
+                        <p class="mb-0 lead fw-normal">An exercise involving the extension of starter code. This continued use of GitHub building this Portfolio, this added interactions with external servers for data. </p>
+                        <hr>
+                        <div class="row gh-1 gv-1">
+                            <div class="col-auto col-sm-6">
+                                <ul class="list-group list-group-gap borderless">
+                                    <li class="list-group-item"><span class="fw-medium me-8">Date:</span>June 14, 2022</li>
+                                    <li class="list-group-item"><span class="fw-medium me-8">Category:</span>Certification</li>
+                                    <li class="list-group-item"><span class="fw-medium me-8">Live App:</span>
+                                        <a href="http://mit-xpro-react-shopping-cart.s3-website-us-east-1.amazonaws.com/"><u>Cart App</u></a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="col-auto col-sm-6">
+                                <ul class="list-group list-group-gap borderless">
+                                    <li class="list-group-item"><span class="fw-medium me-8">Client:</span>MIT xPRO</li>
+                                    <li class="list-group-item"><span class="fw-medium me-8">GitHub:</span>
+                                        <a href="https://github.com/tjmcode/MITxPRO-ShoppingCart2.git"><u>Cart App</u></a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="d-none d-xl-block col-1"></div>
+                </div>
+                <!-- BAD BANK2: React Application -->
+                <div class="row gv-3 align-items-center mb-100 mb-lg-0">
+                    <div class="col-12 col-lg-6 order-lg-2 show-on-scroll" data-show-duration="500" data-show-distance="20" data-show-origin="right" data-show-delay="50">
+                        <a href="assets/images/mit-xpro/badbank2.png" class="gallery-item gallery-item-lg" data-fancybox="" data-animation-effect="fade">
+                            <img src="assets/images/mit-xpro/badbank2.png" alt="" border="1">
+                        </a>
+                    </div>
+                    <div class="d-none d-lg-block col-1 order-lg-1"></div>
+                    <div class="col-12 col-lg-5 order-lg-0 show-on-scroll" data-show-duration="500" data-show-distance="20" data-show-origin="right" data-show-delay="250">
+                        <h3>Bad Bank React App</h3>
+                        <p>Rebuilt from scratch as a 'create-react-app' with REACT v18. This was a major refactoring of the Bad Bank App that was done as a pure HTML site during the MIT Digital Transformation course. </Applet>
+                        </p>
+                        <hr>
+                        <div class="row gh-1 gv-1">
+                            <div class="col-auto col-sm-6">
+                                <ul class="list-group list-group-gap borderless">
+                                    <li class="list-group-item"><span class="fw-medium me-8">Date:</span>July 6, 2022</li>
+                                    <li class="list-group-item"><span class="fw-medium me-8">Category:</span>Certification</li>
+                                    <li class="list-group-item"><span class="fw-medium me-8">Live App:</span>
+                                        <a href="http://timothy-mcguirebankingapplication.s3-website.us-east-2.amazonaws.com/#/"><u>Bad Bank</u></a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="col-auto col-sm-6">
+                                <ul class="list-group list-group-gap borderless">
+                                    <li class="list-group-item"><span class="fw-medium me-8">Client:</span>MIT xPRO</li>
+                                    <li class="list-group-item"><span class="fw-medium me-8">GitHub:</span>
+                                        <a href="https://github.com/tjmcode/MITxPRO-BadBankReact2.git"><u>Bad Bank</u></a>
                                     </li>
                                 </ul>
                             </div>
