--- a/index.html
+++ b/index.html
@@ -735,7 +735,7 @@
                                             <path d="M1333.33 753.49c-48.5 12.33-78.5.54-105.41-39.87L1036.5 448.79l-27.67-36.67L785.29 714.5c-25.54 36.38-52.33 52.2-100 39.33l286.25-384.25-266.5-347.09c45.83-8.91 77.5-4.38 105.62 36.67l198.54 268.13 200-266.67c25.62-36.38 53.17-50.2 99.17-36.8l-103.33 137-140 182.29c-16.67 20.83-14.38 35.09.96 55.2l267.33 355.18zM.34 363.16l23.41-115.17c63.75-227.92 325-322.63 505.17-181.8 105.29 82.83 131.46 200 126.25 331.25H61.67C52.76 633.69 222.8 776.27 439.58 703.53c76.04-25.54 120.83-85.09 143.25-159.58 11.38-37.33 30.2-43.17 65.29-32.5-17.91 93.17-58.33 171-143.75 219.71-127.62 72.91-309.8 49.33-405.62-52C41.66 620.36 18.08 545.87 7.5 466.2c-1.67-13.17-5-25.71-7.5-38.33.22-21.56.34-43.11.34-64.67v-.04zm62.41-15.83h536.33c-3.5-170.83-109.87-292.17-255.25-293.2-159.58-1.25-274.17 117.2-281.09 293.2h.01z" fill-rule="nonzero" />
                                         </svg></a></div>
                                 <div class="feature-body">
-                                    <h4 class="feature-title">Express</h4>
+                                    <h4 class="feature-title">Express JS</h4>
                                     <p class="feature-text">Express is a minimal and flexible Node.js web application framework that provides a robust set of features for web and mobile applications.</p>
                                 </div>
                             </div>
@@ -774,6 +774,70 @@
                                 </div>
                             </div>
                         </div>
+                        <!-- STRAPI -->
+                        <div class="col-md-6 col-lg-4 show-on-scroll" data-show-duration="500" data-show-distance="20" data-show-delay="150">
+                            <div class="feature">
+                                <div class="feature-icon"><a href="https://strapi.io/"><svg xmlns="http://www.w3.org/2000/svg" fill="none" width="90px" viewBox="0 0 31 31">
+                                            <defs />
+                                            <path fill="#8E75FF" fill-rule="evenodd" d="M25.979 4.727H8.751v8.638h8.477c.302 0 .547.245.547.547v8.36h8.751V5.275a.547.547 0 00-.547-.548z" clip-rule="evenodd" />
+                                            <path fill="#8E75FF" fill-rule="evenodd" d="M8.75 4.727v8.638H.668a.274.274 0 01-.192-.469L8.75 4.727zM18.241 30.45a.274.274 0 01-.466-.195v-7.983h8.751l-8.285 8.177z" clip-rule="evenodd" opacity=".405" />
+                                            <path fill="#8E75FF" d="M8.75 13.365h8.752c.15 0 .273.122.273.273v8.634H9.298a.547.547 0 01-.547-.547v-8.36z" opacity=".405" />
+                                        </svg></a></div>
+                                <div class="feature-body">
+                                    <h4 class="feature-title">Strapi</h4>
+                                    <p class="feature-text">Strapi an open-source Headless Content Management System (CMS), allowing developers to use their favorite tools and frameworks while allowing editors to manage and distribute it anywhere.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- GraphQL -->
+                        <div class="col-md-6 col-lg-4 show-on-scroll" data-show-duration="500" data-show-distance="20" data-show-delay="200">
+                            <div class="feature">
+                                <div class="feature-icon"><a href="https://graphql.org/"><svg xmlns="http://www.w3.org/2000/svg" width="84" height="84" viewBox="0 0 100 100" fill="#e10098">
+                                            <style>
+                                                svg
+                                                {
+                                                    fill: color(display-p3 0.8824 0 0.5961);
+                                                }
+                                            </style>
+                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M50 6.90308L87.323 28.4515V71.5484L50 93.0968L12.677 71.5484V28.4515L50 6.90308ZM16.8647 30.8693V62.5251L44.2795 15.0414L16.8647 30.8693ZM50 13.5086L18.3975 68.2457H81.6025L50 13.5086ZM77.4148 72.4334H22.5852L50 88.2613L77.4148 72.4334ZM83.1353 62.5251L55.7205 15.0414L83.1353 30.8693V62.5251Z" />
+                                            <circle cx="50" cy="9.3209" r="8.82" />
+                                            <circle cx="85.2292" cy="29.6605" r="8.82" />
+                                            <circle cx="85.2292" cy="70.3396" r="8.82" />
+                                            <circle cx="50" cy="90.6791" r="8.82" />
+                                            <circle cx="14.7659" cy="70.3396" r="8.82" />
+                                            <circle cx="14.7659" cy="29.6605" r="8.82" />
+                                        </svg></a></div>
+                                <div class="feature-body">
+                                    <h4 class="feature-title">GraphQL</h4>
+                                    <p class="feature-text">A query language developed by Facebook to support building responsive Application Programming Interfaces (APIs).</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- NEXT-JS -->
+                        <div class="col-md-6 col-lg-4 show-on-scroll" data-show-duration="500" data-show-distance="20" data-show-delay="100">
+                            <div class="feature">
+                                <div class="feature-icon"><a href="https://nextjs.org/"><svg width="109px" height="124px" viewBox="0 0 207 124" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                            <!-- Generator: Sketch 51.2 (57519) - http://www.bohemiancoding.com/sketch -->
+                                            <title>NEXT JS LOGO</title>
+                                            <defs></defs>
+                                            <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                                <g id="Black-Next.js" transform="translate(-247.000000, -138.000000)" fill="#000000" fill-rule="nonzero">
+                                                    <g id="next-black" transform="translate(247.000000, 138.000000)">
+                                                        <g id="EXT-+-Type-something">
+                                                            <path d="M48.9421964,32.6320058 L87.9011585,32.6320058 L87.9011585,35.7136421 L52.5134345,35.7136421 L52.5134345,58.9070103 L85.7908813,58.9070103 L85.7908813,61.9886466 L52.5134345,61.9886466 L52.5134345,87.4526941 L88.306981,87.4526941 L88.306981,90.5343303 L48.9421964,90.5343303 L48.9421964,32.6320058 Z M91.3912326,32.6320058 L95.5306221,32.6320058 L113.8738,58.0960534 L132.622801,32.6320058 L158.124498,0.286809811 L116.22757,60.7722112 L137.817329,90.5343303 L133.51561,90.5343303 L113.8738,63.4483691 L94.1508254,90.5343303 L89.9302715,90.5343303 L111.682358,60.7722112 L91.3912326,32.6320058 Z M139.359455,35.713642 L139.359455,32.6320058 L183.756439,32.6320058 L183.756439,35.7136421 L163.302983,35.7136421 L163.302983,90.5343303 L159.731745,90.5343303 L159.731745,35.7136421 L139.359455,35.713642 Z" id="EXT"></path>
+                                                            <polygon id="Type-something" points="0.202923647 32.6320058 4.66697141 32.6320058 66.2235778 124.303087 40.785176 90.5343303 3.93649086 37.0111732 3.77416185 90.5343303 0.202923647 90.5343303"></polygon>
+                                                        </g>
+                                                        <path d="M183.396622,86.5227221 C184.134938,86.5227221 184.673474,85.9601075 184.673474,85.233037 C184.673474,84.5059658 184.134938,83.9433513 183.396622,83.9433513 C182.666993,83.9433513 182.11977,84.5059658 182.11977,85.233037 C182.11977,85.9601075 182.666993,86.5227221 183.396622,86.5227221 Z M186.905793,83.1297235 C186.905793,85.2763149 188.460599,86.678523 190.727662,86.678523 C193.142388,86.678523 194.601647,85.233037 194.601647,82.7229099 L194.601647,73.8855335 L192.655968,73.8855335 L192.655968,82.7142542 C192.655968,84.1078073 191.952397,84.8521899 190.710289,84.8521899 C189.598473,84.8521899 188.842785,84.1597409 188.816727,83.1297235 L186.905793,83.1297235 Z M197.146664,83.0172011 C197.285642,85.2503478 199.153145,86.678523 201.932686,86.678523 C204.903321,86.678523 206.762139,85.1811034 206.762139,82.792155 C206.762139,80.9138876 205.702439,79.8752151 203.131364,79.2779777 L201.750279,78.9404092 C200.117298,78.5595622 199.457158,78.0488813 199.457158,77.1573541 C199.457158,76.0321243 200.482113,75.296398 202.019547,75.296398 C203.478806,75.296398 204.48639,76.0148135 204.668797,77.1660091 L206.562359,77.1660091 C206.44944,75.0626962 204.590622,73.5825873 202.045605,73.5825873 C199.309495,73.5825873 197.48542,75.0626962 197.48542,77.2871878 C197.48542,79.1221767 198.519063,80.2127835 200.786126,80.7407758 L202.401734,81.1302779 C204.060773,81.5197807 204.790402,82.091051 204.790402,83.0431676 C204.790402,84.1510859 203.643842,84.9560573 202.08035,84.9560573 C200.403939,84.9560573 199.240006,84.2030196 199.074971,83.0172011 L197.146664,83.0172011 Z" id=".JS"></path>
+                                                    </g>
+                                                </g>
+                                            </g>
+                                        </svg></a></div>
+                                <div class="feature-body">
+                                    <h4 class="feature-title">Next JS</h4>
+                                    <p class="feature-text">A React (Node JS) Framework that supports building production websites with minimal effort.</p>
+                                </div>
+                            </div>
+                        </div>
                         <!-- MIT xPRO -->
                         <div class="col-md-6 col-lg-4 show-on-scroll" data-show-duration="500" data-show-distance="20" data-show-delay="150">
                             <div class="feature">
@@ -788,7 +852,7 @@
                                         </svg></a></div>
                                 <div class="feature-body">
                                     <h4 class="feature-title">MIT xPRO</h4>
-                                    <p class="feature-text">IT courses from MIT providing education and coding certification in Mongo, Express, React, and Node JS (MERN).</p>
+                                    <p class="feature-text">IT courses from MIT providing education and coding certification in MongoDB/Strapi, Express JS, React/GraphQL, and Node JS/Next JS (MERN).</p>
                                 </div>
                             </div>
                         </div>
