Updated CAESAR slogan mark.

--- a/about-me.html
+++ b/about-me.html
@@ -561,7 +561,7 @@
                                 </button>
                                 <div id="collapseCoding" class="collapse" data-parent="#accordionAbout">
                                     <div class="collapse-content">
-                                        <p class="mb-0 font-size-16">"<b>Code like a Machine</b>: Consistently, Explicitly, Simply, and for Readability (CAESAR)."<span>&#8480;</span></p>
+                                        <p class="mb-0 font-size-16">"<b>Code like a Machine</b>: <u>C</u>onsistently <u>a</u>nd <u>E</u>xplicitly, <u>S</u>imply <u>a</u>nd for <u>R</u>eadability (Hail CAESAR)."<span>&#8480;</span></p>
                                         <br>
                                         <p class="mb-0 font-size-16">"Define the Style Guides, Code Templates, and the Release and Support Process first... <i>the rest is easy</i>."</p>
                                     </div>
